--- a/phase1.html
+++ b/phase1.html
@@ -121,7 +121,7 @@
             A few synthetic outliers were identified, mostly arising from unusual keyword combinations. These instances provided valuable feedback, allowing us to refine our prompt design and improve generation diversity without sacrificing accuracy.
             </p>
             <figure style="text-align: center; margin-bottom: 3em;">
-                <img src="images/pca_v1.jpg" alt="Synthetic Data Generation Pipeline" style="max-width: 80%; height: auto;">
+                <img src="images/pca.png" alt="Synthetic Data Generation Pipeline" style="max-width: 80%; height: auto;">
                 <figcaption><em>Figure: Overview of the Synthetic Data Generation Pipeline.</em></figcaption>
               </figure>
 
